--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <div class="main"></div>
+    <div class="top">
+      <button class="= grid-size">New Grid</button>
+    </div>
+    <div class="game-body">
+      <div class="main"></div>
+    </div>
   </body>
 </html>
